--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,24 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scene/level_0.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Script/", "res://Scene/")
+dock_filesystem_selected_paths=PackedStringArray("res://Script/ball.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Script/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/ball.tscn", "res://Scene/mananger.tscn", "res://Scene/level_0.tscn")
-current_scene="res://Scene/mananger.tscn"
+open_scenes=PackedStringArray("res://Scene/ball.tscn", "res://Scene/mananger.tscn", "res://Scene/level_0.tscn", "res://Scene/UI.tscn")
+current_scene="res://Scene/level_0.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
-open_scripts=["res://Script/ball.gd", "res://Script/Camera3D.gd"]
-selected_script="res://Script/Camera3D.gd"
+open_scripts=["res://Script/ball.gd", "res://Script/Camera3D.gd", "res://Script/global.gd", "res://Script/UI.gd"]
+selected_script="res://Script/ball.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -49,8 +49,8 @@ selected_shader=""
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=true
 log_filter_3=false
 log_filter_4=true
