--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,31 +12,32 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=257
+dock_hsplit_2=225
 dock_hsplit_3=-255
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Script/global.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Script/", "res://Scene/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scene/mananger.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/ball.tscn", "res://Scene/level_0.tscn", "res://Scene/menu.tscn", "res://Scene/language.tscn", "res://Scene/UI.tscn")
-current_scene="res://Scene/menu.tscn"
+open_scenes=PackedStringArray("res://Scene/ball.tscn", "res://Scene/menu.tscn", "res://Scene/UI.tscn", "res://Scene/level_0.tscn", "res://Scene/mananger.tscn", "res://Scene/SceneTransition.tscn")
+current_scene="res://Scene/UI.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Script/ball.gd", "res://Script/Camera3D.gd", "res://Script/global.gd", "res://Script/language.gd", "res://Script/menu.gd", "res://Script/UI.gd"]
-selected_script="res://Script/menu.gd"
+open_scripts=["res://Script/ball.gd", "res://Script/Camera3D.gd", "res://Script/global.gd", "res://Script/language.gd", "res://Script/menu.gd", "res://Script/SceneTransition.gd", "res://Script/UI.gd"]
+selected_script="res://Script/UI.gd"
 open_help=["DirAccess", "FileAccess", "Object"]
 script_split_offset=150
 list_split_offset=0
