--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 78,
-"scroll_position": 0.0,
+"row": 80,
+"scroll_position": 65.0,
 "selection": true,
-"selection_from_column": 10,
-"selection_from_line": 78,
-"selection_to_column": 16,
-"selection_to_line": 78,
+"selection_from_column": 3,
+"selection_from_line": 80,
+"selection_to_column": 45,
+"selection_to_line": 80,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 28,
 "scroll_position": 9.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 52,
+"selection_from_line": 28,
+"selection_to_column": 58,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,10 +39,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -67,11 +71,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 60,
+"column": 56,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 24,
-"scroll_position": 6.0,
+"h_scroll_position": 2,
+"row": 5,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,15 +85,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 18.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 27,
-"selection_to_column": 14,
-"selection_to_line": 27,
+"row": 11,
+"scroll_position": 12.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Script/SceneTransition.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 60,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
